openshift-config/datagrid/config/datagrid-app-ss.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: shepherd-uat-datagrid
  labels:
    app: datagrid73-basic
    application: datagrid-app
    template: datagrid73-basic
  name: datagrid-app
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: datagrid73-basic
      application: datagrid-app
      deploymentConfig: datagrid-app
  serviceName: datagrid-app-ping
  template:
    metadata:
      labels:
        app: datagrid73-basic
        application: datagrid-app
        deploymentConfig: datagrid-app
      name: datagrid-app
    spec:
      containers:
        - env:
            - name: USER_CONFIG_MAP
              value: 'true'
            - name: JGROUPS_PING_PROTOCOL
              value: openshift.DNS_PING
            - name: OPENSHIFT_DNS_PING_SERVICE_NAME
              value: datagrid-app-ping
            - name: OPENSHIFT_DNS_PING_SERVICE_PORT
              value: '8888'
            - name: AB_ENABLE_PROMETHEUS
              value: 'true'
          image: jboss/infinispan-server:9.4.11.Final
          imagePullPolicy: Always
          name: datagrid-app
          ports:
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
            - containerPort: 8888
              name: ping
              protocol: TCP
            - containerPort: 11211
              name: mc-shepherd
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/datagrid/standalone/configuration/user
              name: datagrid-config-rhnqg
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            defaultMode: 420
            name: datagrid-config
          name: datagrid-config-rhnqg
  updateStrategy:
    type: RollingUpdate
