openshift-config/datagrid/config/datagrid-app-ping.yml
apiVersion: v1
kind: Service
metadata:
  namespace: shepherd-uat-datagrid
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  labels:
    app: datagrid73-basic
    application: datagrid-app
    template: datagrid73-basic
  name: datagrid-app-ping
spec:
  clusterIP: None
  ports:
    - name: ping
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    deploymentConfig: datagrid-app
  sessionAffinity: None
  type: ClusterIP
